--- a/index.html
+++ b/index.html
@@ -143,7 +143,12 @@
         <p>
           <a href="https://www.facebook.com/" target="_blank">Facebook</a> |
           <a href="https://www.instagram.com/" target="_blank"> Instagram</a> |
-          <a href="http://linked.com/" target="_blank">LinkedIn</a>
+          <a
+            href="http://linked.com/"
+            target="
+          _blank"
+            >LinkedIn</a
+          >
         </p>
       </div>
     </section>
